display return data in list.

--- a/www/index.html
+++ b/www/index.html
@@ -14,6 +14,7 @@
 
     <!-- ionic/angularjs js -->
     <script src="lib/ionic/js/ionic.bundle.js"></script>
+    <script src="js/controllers/resume_controller.js"></script>
 
     <!-- cordova script (this will be a 404 during development) -->
     <script src="cordova.js"></script>
@@ -25,9 +26,15 @@
 
     <ion-pane>
       <ion-header-bar class="bar-stable">
-        <h1 class="title">Ionic Blank Starter</h1>
+        <h1 class="title">My Resume</h1>
       </ion-header-bar>
       <ion-content>
+        <ul class="list" ng-controller="resumeController">
+          <li class="item">
+            <h3>{{resume.first_name}} {{resume.last_name}}</h3>
+            <p>{{resume.email}}</p>
+          </li>
+        </ul>
       </ion-content>
     </ion-pane>
   </body>
